--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Launchcontrol</title>
+    <link rel="icon" type="image/png" href="img/icon-32.png" />
 
     <!-- jQuery UI -->
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/themes/base/jquery-ui.css" type="text/css" media="all" />
@@ -19,25 +20,31 @@
   </head>
 
   <body>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">
+            <img src="img/icon-32.png" alt="logo" style="display: inline-block;">Launchcontrol
+          </a>
+        </div>
+      </div>
+    </nav>
     <div class="container-fluid fullscreen">
-    <h1>Launchcontrol</h1>
-    <div class="row fullheight">
-      <div class="col-md-4 fullheight">
-        <div class="panel panel-default fullheight">
-          <div class="panel-heading">
-            <div class="btn-group" role="group" aria-label="controls">
-              <button type="button" class="btn btn-default disabled"><span class="glyphicon glyphicon-backward" aria-hidden="true"></span></button>
-              <button type="button" class="btn btn-default disabled"><span class="glyphicon glyphicon-play" aria-hidden="true"></span></button>
-              <button type="button" class="btn btn-default disabled"><span class="glyphicon glyphicon-pause" aria-hidden="true"></span></button>
-              <button type="button" class="btn btn-default disabled"><span class="glyphicon glyphicon-stop" aria-hidden="true"></span></button>
-              <button type="button" class="btn btn-default disabled"><span class="glyphicon glyphicon-forward" aria-hidden="true"></span></button>
-              <button type="button" class="btn btn-default disabled"><span class="glyphicon glyphicon-open-file" aria-hidden="true"></span></button>
+      <div class="row fullheight">
+        <div class="col-md-4 fullheight">
+          <div class="panel panel-default fullheight">
+            <div class="panel-heading">
+              <div id="controls"></div>
+            </div>
+            <div class="panel-body fullscreen">
+              <div id="fleshlight" class="fullheight"></div>
             </div>
           </div>
-          <div class="panel-body fullscreen">
-            <div id="fleshlight" class="fullheight"></div>
-          </div>
         </div>
+      </div>
+      <div class="footer navbar-fixed-bottom">
+        <a href="https://github.com/funjack/launchcontrol">Launchcontrol</a> by Funjack
       </div>
     </div>
 
@@ -48,7 +55,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- Launch -->
     <script src="js/ui/launch.js" type="text/javascript"></script>
+    <script src="js/ui/controls.js" type="text/javascript"></script>
     <!-- Launchcontrol -->
+    <script src="js/launchcontrol-client.js" type="text/javascript"></script>
     <script src="js/launchcontrol.js" type="text/javascript"></script>
   </body>
 </html>
